[PR c++/84375] Fix ICE after bad friend

https://gcc.gnu.org/ml/gcc-patches/2018-02/msg00987.html
	PR c++/84375
	* name-lookup.c (do_pushdecl): Bail out on bad local friend injection.

	* g++.dg/lookup/pr84375.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257739 138bc75d-0d04-0410-961f-82ee72b054a4